# OpenCV-Ubuntu-20-04

./: README.md
OpenCV_VideoStream/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  url.txt
OpenCV_VideoStream/include/: DetectAndTrack.h  FaceDetection.h  Images.h  Tracking.h  Videos.h
OpenCV_VideoStream/src/: CMakeLists.txt  DetectAndTrack.cpp  FaceDetection.cpp  Images.cpp  Makefile  Tracking.cpp  Videos.cpp  cmake_install.cmake  main.cpp
